--- a/app/views/themes/bioart/admin/artists/index.html.haml
+++ b/app/views/themes/bioart/admin/artists/index.html.haml
@@ -10,8 +10,8 @@
       %table
         %thead
           %tr
-            %th= sortable_column "Name"
-            %th Activities
+            %th= sortable_column "Name", column: :alphabetical_name
+            %th= sortable_column "Activities"
             %th metadata
             %th
         %tbody
