--- a/app/views/themes/bioart/admin/activities/index.html.haml
+++ b/app/views/themes/bioart/admin/activities/index.html.haml
@@ -1,11 +1,11 @@
 .row.expanded
   .small-12.columns
-    %h1 Activities
+    %h1 Events
 
     %p= link_to "Edit activity types", admin_activitytypes_path, class: [:button, :secondary, :small]
 .row.expanded
   .small-12.columns
-    = link_to 'New Activity', new_admin_activity_path, class: [:button, :small]    
+    = link_to 'New Activity', new_admin_activity_path, class: [:button, :small]
     %table
       %thead
         %tr
@@ -18,7 +18,7 @@
           %th Published?
           %th
 
-      
+
       %tbody
         - @activities.each do |activity|
           %tr
@@ -29,7 +29,7 @@
                 .partners
                   - activity.responsible_organisations.each do |ro|
                     = link_to ro.name, ro, target: :_blank
-          
+
             %td= activity.activitytype.try(:name)
             %td
               %small= truncate_html(activity.description, length: 100)
