--- a/app/views/themes/bioart/layouts/_footer.html.haml
+++ b/app/views/themes/bioart/layouts/_footer.html.haml
@@ -16,7 +16,7 @@
 
     .icons.float-right
       -#.email= link_to image_tag(theme_image_path('layout/email_icon.png')), '#'
-      .fb= link_to image_tag(image_url('bioart/images/layout/fb_icon.png')), 'https://www.facebook.com/groups/bioartsociety/', target: :_blank
+      .fb= link_to image_tag(image_url('bioart/images/layout/fb_icon.png')), 'https://www.facebook.com/bioartsociety/', target: :_blank
       .twitter= link_to image_tag(image_url('bioart/images/layout/twitter_icon.png')), 'https://twitter.com/bioartsociety', target: :_blank
       .instagram= link_to image_tag(image_url('bioart/images/layout/instagram_icon.png')), 'https://www.instagram.com/bioartsociety/', target: :_blank
       .rss= link_to image_tag(image_url('bioart/images/layout/rss_icon.png')), '/feed', target: :_blank
