--- a/app/assets/themes/bioart/stylesheets/pages.css.scss
+++ b/app/assets/themes/bioart/stylesheets/pages.css.scss
@@ -2,6 +2,8 @@
 @import '_settings';
 
 .about_page {
+  height: 100%;
+  padding-bottom: 1.5rem;
   &.errors {
     padding: 3rem 0;
   }
@@ -25,7 +27,9 @@
     padding: 0.25rem;
     line-height: 1em;
   }
-
+  .project_subtitle {
+    margin-top: 1.25rem;
+  }
   .text {
     opacity: 0.9;
     .red {
@@ -47,18 +51,18 @@
       line-height: 1em;
       padding: 0.25rem 0.5rem;
       position: absolute;
-    
+
     }
     clear: both;
     background-color: #fff;
     font-family: $titillium;
 
-    margin-top: 1.75rem;
+    // margin-top: 1.75rem;
     margin-bottom: 10.75rem;
     @include breakpoint(small only) {
       margin: 0;
     }
-    
+
     .excerpt {
       padding: 3.347rem 2rem 3.347rem;
       @include breakpoint(small only) {
@@ -108,11 +112,11 @@
     }
 //    }
   }
-  
+
   .member_row_header {
     margin: 3rem 0;
   }
-  
+
   .member_box {
     .member_image {
       min-height: 546px;
@@ -139,7 +143,7 @@
       }
     }
   }
-  
+
   .staff_box {
     margin-top: 3rem;
     @include breakpoint(small only) {
@@ -162,6 +166,7 @@
 }
 
 .page_detail {
+  padding-bottom: 1.5rem;
   .section_title {
     padding: 2.7rem 0;
     font-family: $rubik;
@@ -174,7 +179,7 @@
     }
   }
   .grid {
-  
+
     .full_width {
       margin: 2rem 0 4.5rem 0;
       float: left;
@@ -186,7 +191,7 @@
         float: left;
         margin: -2rem 0 0 0;
         @include breakpoint(small only) {
-          font-size: 8vw; 
+          font-size: 8vw;
           line-height: 100%;
           margin-bottom: 5rem;
         }
@@ -211,7 +216,7 @@
     min-width: 43%;
     .box_chunk {
       .box_title {
-        
+
           background-color: $fuschia;
           font-family: $rubik;
           float: left;
@@ -230,13 +235,13 @@
           line-height: 1em;
           padding: 0.25rem 0.5rem;
           position: absolute;
-    
+
       }
       p {
         font-family: $titillium;
         font-size: 1rem;
         line-height: 1.4rem;
-      
+
         img {
           padding: 1.5rem 0;
         }
@@ -253,18 +258,18 @@
   .text {
     padding: 1.875em 2rem;
     background-color: white;
-    margin-bottom: 2.2rem;
-    
+    // margin-bottom: 2.2rem;
+
     .page_image {
       margin-bottom: 1.5rem;
     }
-    
-    
+
+
     .excerpt , .excerpt p {
       font-family: $titillium;
       font-size: 1rem;
       line-height: 1.4rem;
-      
+
       img {
         padding: 1.5rem 0;
         display: block;
@@ -277,6 +282,6 @@
       }
     }
   }
-  
-  
+
+
 }
