--- a/app/views/themes/bioart/admin/pages/index.html.haml
+++ b/app/views/themes/bioart/admin/pages/index.html.haml
@@ -7,30 +7,37 @@
     = link_to 'New Page', new_admin_page_path, class: [:button, :small]
 .filter_box.row.expanded
   .medium-6.columns
+    .filter_title Filter by node:
+    %select#by_node
+      %option{:value => ""} &nbsp;
+      - Node.all.sort_by{|x| x.name.downcase}.each do |node|
+        %option{:value => node.id, :selected => (params[:by_node].nil? ? (@node.id.to_s == node.id.to_s ? :selected : false) : (params[:by_node].to_s == node.id.to_s ? :selected : false))}= node.name
+  .medium-6.columns
     .filter_title Filter by project:
     %select#by_project
       %option{:value => ""} &nbsp;
       - Project.all.sort_by{|x| x.name.downcase}.each do |project|
-        %option{:value => project.id, :selected => (params[:by_project] == project.id.to_s ? :selected : false)}= project.name    
+        %option{:value => project.id, :selected => (params[:by_project] == project.id.to_s ? :selected : false)}= project.name
 .row.expanded
   .small-12.columns
     %table.cms
       %thead
         %tr
-          
+
           %th= sortable_column "Title"
           %th= sortable_column "Activity/subpages", column: 'subsite'
           %th Body
           %th Image
+          %th= sortable_column "Last updated", column: 'updated_at'
           %th
-      
+
       %tbody
         - @pages.each do |page|
-          - next unless page.root?
+          -# - next unless page.root?
           %tr
             %td
               = page.title
-              
+
 
               %p.project
                 = page.node.name
@@ -39,11 +46,11 @@
                   = " : "
                   = page.project.name
             %td
-              
+
               - unless page.children.empty?
                 .subpages
                   %u Subpages
-                
+
                   - page.children.each do |p|
                     .subpage{:'data-toggle' => "page_#{p.id}"}
                       = p.title
@@ -55,6 +62,7 @@
                       = link_to 'Delete', [:admin, p], method: :delete, data: {confirm: 'Are you sure you want to delete this forever?'}, class: [:button, :tiny, :alert]
             %td= truncate_html(strip_tags(page.body), length: 150)
             %td= image_tag page.image.url(:thumb)
+            %td= l page.updated_at.to_date, format: :long rescue 'unknown'
             %td
               = link_to 'Show', page, class: [:button, :small], target: :_blank
               = link_to 'Edit', edit_admin_page_path(page), class: [:button, :small]
@@ -73,4 +81,4 @@
       } else {
         window.location.href=parts[0] + "?" + $(this).attr('id') + "=" + $(this).val();
       }
-    });  
+    });
