--- a/app/views/themes/bioart/pages/show.html.haml
+++ b/app/views/themes/bioart/pages/show.html.haml
@@ -8,13 +8,16 @@
             %span.years= @project.year_range
         %h3.project_subtitle= @page.title
     .row
-      .small-12.columns= render partial: 'shared/project_menu'
+      .small-12.columns
+        = render partial: 'shared/project_menu'
+
   - else
     .row
       .small-10.small-centered.medium-12.columns.section_title
         = @page.title
-
-
+    - if @page.show_about_menu == true
+      .row.project_detail.nobg
+        .small-10.small-centered.medium-12.columns= render partial: 'shared/about_menu'
 
   .row
     .small-12.columns
