--- a/app/views/themes/bioart/shared/_about_menu.html.haml
+++ b/app/views/themes/bioart/shared/_about_menu.html.haml
@@ -1,5 +1,5 @@
-%ul.dropdown.menu.project_menu{:'data-dropdown-menu' => ''}
+%ul.dropdown.menu.project_menu.about_menu{:'data-dropdown-menu' => ''}
   %li{class: @page&.slug == 'members' ? :active : false }= link_to 'Members', page_path('members')
   %li{class: @page&.slug == 'board-and-staff' ? :active : false }= link_to 'Board and staff', page_path('board-and-staff')
-  %li{class: controller.controller_name == 'pressreleases' ? :active : false }= link_to 'Media', pressreleases_path
-  %li= link_to 'Supporters and funders', '#'
+  %li{class: controller.controller_name == 'pressreleases' ? :active : false }= link_to 'For Media', pressreleases_path
+  %li{class: controller.controller_name == 'supporters' ? :active : false }= link_to 'Supporters and funders', supporters_path
