--- a/app/views/themes/bioart/admin/activities/_form.html.haml
+++ b/app/views/themes/bioart/admin/activities/_form.html.haml
@@ -45,9 +45,9 @@
         :javascript
           $('.fdatetimepicker').fdatetimepicker({format: 'yyyy-mm-dd hh:ii', pickTime: true});
         -# = ff.object.start_at.localtime if ff.object.start_at
-        = ff.input :start_at, as: :string, input_html: { class: :fdatetimepicker, value: ff.object.new_record? ? '' : ff.object.start_at.localtime.strftime('%Y-%m-%d %H:%M')}, label: 'Start date/time of this session'
+        = ff.input :start_at, as: :string, input_html: { class: :fdatetimepicker, value: ff.object.new_record? ? '' : ff.object.start_at.in_time_zone.strftime('%Y-%m-%d %H:%M')}, label: 'Start date/time of this session'
         -# = ff.object.end_at
-        = ff.input :end_at, as: :string, input_html: { class: :fdatetimepicker, value: ff.object.new_record? ? '' : ff.object.end_at.localtime.strftime('%Y-%m-%d %H:%M') }, label: 'End date/time of this session'
+        = ff.input :end_at, as: :string, input_html: { class: :fdatetimepicker, value: ff.object.new_record? ? '' : ff.object.end_at.in_time_zone.strftime('%Y-%m-%d %H:%M') }, label: 'End date/time of this session'
         = ff.input :location, label: 'Location of this session, if not SOLU'
         = ff.link_to_remove 'Remove this session'
       = f.link_to_add 'Add a meeting/session', :eventsessions, class: [:button]
