--- a/app/views/themes/bioart/activities/show.html.haml
+++ b/app/views/themes/bioart/activities/show.html.haml
@@ -23,7 +23,7 @@
         - else
           - @activity.eventsessions.sort_by(&:start_at).each do |session|
             %p.date
-              = date_range(session.start_at.localtime, session.end_at.localtime)
+              = date_range(session.start_at.in_time_zone, session.end_at.in_time_zone)
               %br/
               - if @activity.eventsessions.map(&:location).uniq.count > 1
                 = session.location.blank? ? 'SOLU' : session.location
